RESOLVED FIXED155179
Array.isArray support for Proxy
https://bugs.webkit.org/show_bug.cgi?id=155179
Summary Array.isArray support for Proxy
Saam Barati
Reported 2016-03-08 11:43:01 PST
Array.isArray(new Proxy([], {})) should be true.
Attachments
patch (7.20 KB, patch)
2016-03-09 15:47 PST, Saam Barati
mark.lam: review+
for landing (7.20 KB, patch)
2016-03-09 16:13 PST, Saam Barati
no flags
Saam Barati
Comment 1 2016-03-09 15:47:34 PST
WebKit Commit Bot
Comment 2 2016-03-09 15:48:44 PST
Attachment 273494 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/ArrayConstructor.cpp:36: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 3 2016-03-09 15:50:22 PST
Comment on attachment 273494 [details] patch r=me
Benjamin Poulain
Comment 4 2016-03-09 15:52:14 PST
View in context: https://bugs.webkit.org/attachment.cgi?id=273494&action=review > Source/JavaScriptCore/tests/stress/proxy-is-array.js:19 > + It would be good to test assert(Array.isArray(proxy)); before revoke() > Source/JavaScriptCore/tests/stress/proxy-is-array.js:22 > + try { Don't we have shouldAssert()?
Saam Barati
Comment 5 2016-03-09 16:03:10 PST
Comment on attachment 273494 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=273494&action=review > Source/JavaScriptCore/runtime/ArrayConstructor.cpp:136 > + JSValue::encode(jsBoolean(false)); Oops. This should obviously be a return.
Saam Barati
Comment 6 2016-03-09 16:13:11 PST
Created attachment 273504 [details] for landing
WebKit Commit Bot
Comment 7 2016-03-09 16:14:00 PST
Attachment 273504 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/ArrayConstructor.cpp:36: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 8 2016-03-09 16:35:55 PST
Comment on attachment 273504 [details] for landing Clearing flags on attachment: 273504 Committed r197899: <http://trac.webkit.org/changeset/197899>
WebKit Commit Bot
Comment 9 2016-03-09 16:35:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.