Source/JavaScriptCore/runtime/ArrayConstructor.cpp
@@ -33,6 +33,7 @@
 #include "JSArray.h"
 #include "JSFunction.h"
 #include "Lookup.h"
+#include "ProxyObject.h"
 #include "JSCInlines.h"
 
 namespace JSC {
@@ -125,9 +126,30 @@ CallType ArrayConstructor::getCallData(JSCell*, CallData& callData)
     return CallType::Host;
 }
 
+// ES6 7.2.2
+// https://tc39.github.io/ecma262/#sec-isarray
 EncodedJSValue JSC_HOST_CALL arrayConstructorIsArray(ExecState* exec)
 {
-    return JSValue::encode(jsBoolean(exec->argument(0).inherits(JSArray::info())));
+    JSValue argumentValue = exec->argument(0);
+
+    if (!argumentValue.isObject())
+        return JSValue::encode(jsBoolean(false));
+
+    JSObject* argument = jsCast<JSObject*>(argumentValue);
+    while (true) {
+        if (argument->inherits(JSArray::info()))
+            return JSValue::encode(jsBoolean(true));
+
+        if (argument->type() != ProxyObjectType)
+            return JSValue::encode(jsBoolean(false));
+
+        ProxyObject* proxy = jsCast<ProxyObject*>(argument);
+        if (proxy->isRevoked())
+            return throwVMTypeError(exec, ASCIILiteral("Array.isArray can not be called on a Proxy that has been revoked."));
+        argument = proxy->target();
+    }
+
+    ASSERT_NOT_REACHED();
 }
 
 EncodedJSValue JSC_HOST_CALL arrayConstructorPrivateFuncIsArrayConstructor(ExecState* exec)
