Source/JavaScriptCore/runtime/ProxyObject.h
@@ -59,14 +59,15 @@ public:
 
     DECLARE_EXPORT_INFO;
 
-    JSObject* target() { return m_target.get(); }
-    JSValue handler() { return m_handler.get(); }
+    JSObject* target() const { return m_target.get(); }
+    JSValue handler() const { return m_handler.get(); }
 
     static void put(JSCell*, ExecState*, PropertyName, JSValue, PutPropertySlot&);
     static void putByIndex(JSCell*, ExecState*, unsigned propertyName, JSValue, bool shouldThrow);
     void putByIndexCommon(ExecState*, JSValue thisValue, unsigned propertyName, JSValue putValue, bool shouldThrow);
     JSValue performGetPrototype(ExecState*);
     void revoke(VM&);
+    bool isRevoked() const;
 
 private:
     ProxyObject(VM&, Structure*);
